--- a/css/module.css
+++ b/css/module.css
@@ -2,8 +2,8 @@
     position: absolute;
     top: 0;
     right: 0;
-    width: 20%;
-    height: 17em;
+    width: 5%;
+    height: 20rem;
     background-color: rgba(255,255,255,0.5);
     content: "";
     z-index: 40;
@@ -13,7 +13,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: 80%;
+    width: 100%;
     height: 17em;
     border-right: 2px solid aqua;
     border-radius: 0.5em;
