--- a/css/theme.css
+++ b/css/theme.css
@@ -1,3 +1,6 @@
+article {
+    background-color: #fff;
+}
 
 article img{
     width: 80%;
@@ -13,7 +16,6 @@ article:hover{
     background: linear-gradient(blue,transparent);
     
 }
-
 
 .header-bg {
     background-color: red;
