--- a/css/module.css
+++ b/css/module.css
@@ -9,7 +9,15 @@
     z-index: 40;
 }
 
-.box1{
+.arrow-next{
+    position: absolute;
+    top: 10rem;
+    right: 2%;
+    height: 100%;
+    z-index: 50;
+}
+
+.box-header{
     position: absolute;
     top: 0;
     left: 0;
@@ -22,7 +30,7 @@
     z-index: 50;
 }
 
-.box2{
+.box-products{
     position: relative;
     left: 0;
     top: 0;
