--- a/css/module.css
+++ b/css/module.css
@@ -4,7 +4,7 @@
     right: 0;
     width: 5%;
     height: 20rem;
-    background-color: rgba(255,255,255,0.5);
+    background: linear-gradient(to left, rgb(255,255,255) 90%,rgba(255,255,255,0));
     content: "";
     z-index: 40;
 }
@@ -22,10 +22,9 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 17em;
+    height: 2em;
     border-right: 2px solid aqua;
     border-radius: 0.5em;
-    background: linear-gradient(to right, rgba(255,255,255,0) 90%, rgb(255,255,255));
     z-index: 50;
 }
 
