--- a/css/module.css
+++ b/css/module.css
@@ -1,3 +1,19 @@
+.arrow-next{
+    position: absolute;
+    top: 10rem;
+    right: 2%;
+    height: 100%;
+    z-index: 50;
+}
+
+.arrow-previous{
+    position: absolute;
+    top: 10rem;
+    left: 18vw;
+    height: 100%;
+    z-index: 50;
+}
+
 .blur{
     position: absolute;
     top: 0;
@@ -7,14 +23,6 @@
     background: linear-gradient(to left, rgb(255,255,255) 90%,rgba(255,255,255,0));
     content: "";
     z-index: 40;
-}
-
-.arrow-next{
-    position: absolute;
-    top: 10rem;
-    right: 2%;
-    height: 100%;
-    z-index: 50;
 }
 
 .box-header{
