--- a/css/module.css
+++ b/css/module.css
@@ -19,7 +19,7 @@
     top: 0;
     right: 0;
     width: 5%;
-    height: 20rem;
+    height: 100vh;
     background: linear-gradient(to left, rgb(255,255,255) 90%,rgba(255,255,255,0));
     content: "";
     z-index: 40;
@@ -31,7 +31,6 @@
     left: 0;
     width: 100%;
     height: 2em;
-    border-right: 2px solid aqua;
     border-radius: 0.5em;
     z-index: 50;
 }
@@ -54,7 +53,6 @@
     left: 0;
     width: 100%;
     height: 2em;
-    background-color: aqua;
     z-index: 100;
 }
 .header .col{
