changed background gradient of hover

--- a/css/theme.css
+++ b/css/theme.css
@@ -13,7 +13,7 @@ article p{
 }
 
 article:hover{
-    background: linear-gradient(blue,transparent);
+    background: linear-gradient(#e7f2fc,transparent);
     
 }
 
